# RedAlt-SteamUp-Installer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/modules/: changes.rs  manifest.rs  mod.rs  settings.rs
